[gd_scene load_steps=11 format=3 uid="uid://dl5c8rsrpb8eo"]

[ext_resource type="Script" path="res://addons/snippeter/menu/listing/listing.gd" id="1_r2htv"]
[ext_resource type="PackedScene" uid="uid://ba05d07go3oks" path="res://addons/snippeter/menu/listing/operation_button.tscn" id="2_k47rx"]
[ext_resource type="Texture2D" uid="uid://ckae87txtbe0e" path="res://addons/snippeter/shared/icons/spacer.8x8.png" id="3_fvk34"]
[ext_resource type="Texture2D" uid="uid://uwfduxjef3fl" path="res://addons/snippeter/shared/icons/tick.png" id="4_8cp4y"]
[ext_resource type="Texture2D" uid="uid://cf5twi7rn7w71" path="res://addons/snippeter/shared/icons/edit_icon.svg" id="5_452yv"]
[ext_resource type="Texture2D" uid="uid://c7w0jqfwakop8" path="res://addons/snippeter/shared/icons/delete_icon.svg" id="6_fc586"]
[ext_resource type="Texture2D" uid="uid://d1mwi87wca16k" path="res://addons/snippeter/shared/icons/copy_icon.svg" id="7_baa3u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2t6wa"]

[sub_resource type="Animation" id="Animation_exedk"]
resource_name = "copy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/HBoxContainer2/CopyButton:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_8cp4y"), ExtResource("7_baa3u")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u461b"]
_data = {
"copy": SubResource("Animation_exedk")
}

[node name="Listing" type="PanelContainer"]
custom_minimum_size = Vector2(0, 16)
offset_right = 256.0
offset_bottom = 23.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_2t6wa")
script = ExtResource("1_r2htv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ListingButton" parent="HBoxContainer" instance=ExtResource("2_k47rx")]
layout_mode = 2
size_flags_horizontal = 3
text = "snippet_name"
icon = ExtResource("3_fvk34")
alignment = 0
icon_alignment = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="CopyButton" parent="HBoxContainer/HBoxContainer2" instance=ExtResource("2_k47rx")]
layout_mode = 2
icon = ExtResource("7_baa3u")

[node name="EditButton" parent="HBoxContainer/HBoxContainer2" instance=ExtResource("2_k47rx")]
layout_mode = 2
icon = ExtResource("5_452yv")

[node name="DeleteButton" parent="HBoxContainer/HBoxContainer2" instance=ExtResource("2_k47rx")]
layout_mode = 2
icon = ExtResource("6_fc586")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u461b")
}

[connection signal="pressed" from="HBoxContainer/ListingButton" to="." method="_on_listing_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer2/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer2/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
